CW-1174: Add warning for sending to contract addresses (#2463)
* feat: add warning for sending to contract addresses

* feat: Add wallet type icon to full screen qr page

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -20,8 +20,9 @@
   "add_receiver": "أضف مستقبل آخر (اختياري)",
   "add_secret_code": "                                     ﺔﻗﺩﺎﺼﻤﻟﺍ ﻖﻴﺒﻄﺗ ﻰﻟﺇ ﻱﺮﺴﻟﺍ ﺰﻣﺮﻟﺍ ﺍﺬﻫ ﻒﺿﺃ ﻭﺃ",
   "add_tip": "أضف بقشيش",
+  "add_token": "إضافة رمز",
   "add_token_disclaimer_check": "لقد قمت بتأكيد عنوان ومعلومات عقد الرمز المميز باستخدام مصدر حسن السمعة. يمكن أن تؤدي إضافة معلومات خبيثة أو غير صحيحة إلى خسارة الأموال.",
-  "add_token_warning": "لا تقم بتحرير أو إضافة رموز وفقًا لتعليمات المحتالين.\nقم دائمًا بتأكيد عناوين الرموز مع مصادر حسنة السمعة!",
+  "add_token_warning": "لا تقم بتحرير أو إضافة رموز وفقًا لتعليمات المحتالين. قم دائمًا بتأكيد عناوين الرموز مع مصادر حسنة السمعة!",
   "add_value": "إضافة قيمة",
   "added_message_for_ata_error": "يرجى التأكد من أن لديك ما يكفي من توازن SOL لإكمال معاملتك.",
   "address": " ﻥﺍﻮﻨﻋ",
@@ -200,6 +201,7 @@
   "contact_name_exists": "                   .ﻒﻠﺘﺨﻣ ﻢﺳﺍ ﺭﺎﻴﺘﺧﺍ ءﺎﺟﺮﻟﺍ .ﻞﻌﻔﻟﺎﺑ ﺓﺩﻮﺟﻮﻣ ﻢﺳﻻ﻿ﺍ ﺍﺬﻬﺑ ﻝﺎﺼﺗﺍ ﺔﻬﺟ",
   "contact_support": "اتصل بالدعم",
   "continue_text": "التالي",
+  "contract_address": "عنوان العقد",
   "contract_warning": "تم وضع علامة على عنوان العقد هذا على أنه احتيالي محتمل. يرجى المتابعة بحذر.",
   "contractName": "ﺪﻘﻌﻟﺍ ﻢﺳﺍ",
   "contractSymbol": "ﺪﻘﻌﻟﺍ ﺰﻣﺭ",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "شراء بطاقة هدايا",
   "purple_dark_theme": "موضوع الظلام الأرجواني",
   "qr_fullscreen": "انقر لفتح ال QR بملء الشاشة",
+  "qr_instruction": "استخدم هذا العنوان لتلقي أي رمز أو تحصيله",
   "qr_payment_amount": "يحتوي هذا ال QR على مبلغ الدفع. هل تريد تغير المبلغ فوق القيمة الحالية؟",
   "quantity": "كمية",
   "question_to_disable_2fa": "هل أنت متأكد أنك تريد تعطيل Cake 2FA؟ لن تكون هناك حاجة إلى رمز 2FA للوصول إلى المحفظة ووظائف معينة.",
@@ -938,11 +941,11 @@
   "to": "ل",
   "today": "اليوم",
   "token_already_exists": "رمز موجود بالفعل",
-  "token_contract_address": "عنوان عقد الرمز",
-  "token_decimal": "رمز عشري",
-  "token_name": "اسم الرمز ، على سبيل المثال: Tether",
-  "token_symbol": "رمز العملة ، على سبيل المثال: USDT",
+  "token_decimal": "رمز عشري (EG: USDT )",
+  "token_name": "اسم الرمز المميز (EG: Tether )",
+  "token_symbol": "رمز الرمز (EG: USDT )",
   "tokenID": "ﻒﻳﺮﻌﺗ ﺔﻗﺎﻄﺑ",
+  "tokens_strong_warning": "لا ترسل الرموز المميزة إلى هذا العنوان !",
   "tor_connection": "ﺭﻮﺗ ﻝﺎﺼﺗﺍ",
   "tor_connection_timeout": "Tor Torn Connection Timeout",
   "tor_experimental": "هذه ميزة تجريبية ، وليس جميع الاتصالات المصنوعة من توجيه Cake Wallet Support - قد تستخدم بعض الاتصالات ClearNet ، من أجل توجيه حركة المرور بشكل كامل باستخدام TOR مع وضع VPN.",
@@ -1134,5 +1137,6 @@
   "you_will_receive_estimated_amount": "سوف تتلقى(ooded )",
   "you_will_send": "تحويل من",
   "youCanGoBackToYourDapp": "يمكنك العودة إلى DAPP الخاص بك الآن",
+  "your": "لك",
   "yy": "YY"
 }
