--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Add another receiver (optional)",
   "add_secret_code": "Or, add this secret code to an authenticator app",
   "add_tip": "Add Tip",
+  "add_token": "Add Token",
   "add_token_disclaimer_check": "I have confirmed the token contract address and information using a reputable source. Adding malicious or incorrect information can result in a loss of funds.",
-  "add_token_warning": "Do not edit or add tokens as instructed by scammers.\nAlways confirm token addresses with reputable sources!",
+  "add_token_warning": "Do not edit or add tokens as instructed by scammers. Always confirm token addresses with reputable sources!",
   "add_value": "Add value",
   "added_message_for_ata_error": "Kindly ensure you have enough SOL balance to complete your transaction.",
   "address": "Address",
@@ -200,6 +201,7 @@
   "contact_name_exists": "A contact with that name already exists. Please choose a different name.",
   "contact_support": "Contact Support",
   "continue_text": "Continue",
+  "contract_address": "Contract Address",
   "contract_warning": "This contract address has been flagged as potentially fraudulent. Please proceed with caution.",
   "contractName": "Contract Name",
   "contractSymbol": "Contract Symbol",
@@ -642,6 +644,7 @@
   "purchase_gift_card": "Purchase Gift Card",
   "purple_dark_theme": "Purple Dark Theme",
   "qr_fullscreen": "Tap to open full screen QR code",
+  "qr_instruction": "Use this address to receive any token or collectible on",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "Quantity",
   "question_to_disable_2fa": "Are you sure that you want to disable Cake 2FA? A 2FA code will no longer be needed to access the wallet and certain functions.",
@@ -939,11 +942,11 @@
   "to": "To",
   "today": "Today",
   "token_already_exists": "Token already exists",
-  "token_contract_address": "Token contract address",
-  "token_decimal": "Token decimal",
-  "token_name": "Token name eg: Tether",
-  "token_symbol": "Token symbol eg: USDT",
+  "token_decimal": "Token decimal (eg: USDT)",
+  "token_name": "Token name (eg: Tether)",
+  "token_symbol": "Token symbol (eg: USDT)",
   "tokenID": "ID",
+  "tokens_strong_warning": "Never send tokens to this address!",
   "tor_connection": "Tor connection",
   "tor_connection_timeout": "Tor connection timeout",
   "tor_experimental": "This is an experimental feature, not all connections made from Cake Wallet support Tor routing - some connections may use clearnet, in order to fully route app traffic use Tor with VPN mode.",
@@ -1135,5 +1138,6 @@
   "you_will_receive_estimated_amount": "You will receive (estimated)",
   "you_will_send": "Convert from",
   "youCanGoBackToYourDapp": "You can go back to your dApp now",
+  "your": "Your",
   "yy": "YY"
 }
