--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Ավելացնել ևս մեկ ստացող (ընտրովի)",
   "add_secret_code": "Կամ ավելացրեք այս գաղտնի կոդը վավերացնող հավելվածում",
   "add_tip": "Ավելացնել Թեյավճար",
+  "add_token": "Ավելացնել նշան",
   "add_token_disclaimer_check": "Ես հաստատել եմ token-ի պայմանագրի հասցեն և տեղեկատվությունը վստահելի աղբյուրի օգտագործմամբ: Վնասակար կամ սխալ տեղեկատվության ավելացումը կարող է հանգեցնել միջոցների կորստի:",
-  "add_token_warning": "Մի խմբագրեք կամ ավելացրեք token-ներ, ինչպես կոչ են անում խարդախները:\nՄիշտ հաստատեք Token-ների հասցեները վստահելի աղբյուրներով:",
+  "add_token_warning": "Մի խմբագրեք կամ ավելացրեք token-ներ, ինչպես կոչ են անում խարդախները: Միշտ հաստատեք Token-ների հասցեները վստահելի աղբյուրներով:",
   "add_value": "Ավելացնել արժեք",
   "added_message_for_ata_error": "Սիրով համոզվեք, որ ձեր գործարքը ավարտելու համար բավականաչափ SOL հավասարակշռություն ունեք:",
   "address": "Հասցե",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Այդ անվանման հետ կապ կա արդեն: Խնդրում ենք ընտրել այլ անուն:",
   "contact_support": "Հետադարձ կապ",
   "continue_text": "Շարունակել",
+  "contract_address": "Պայմանագրի հասցե",
   "contract_warning": "Պայմանագրի այս հասցեն դրոշմել է որպես հնարավոր կեղծ: Խնդրում ենք զգուշությամբ շարունակեք:",
   "contractName": "Գործարքի անուն",
   "contractSymbol": "Գործարքի Նշան",
@@ -640,6 +642,7 @@
   "purchase_gift_card": "Նվեր քարտ գնել",
   "purple_dark_theme": "Մանուշակագույն մութ տեսք",
   "qr_fullscreen": "Սեղմեք այստեղ բացելու ամբողջ էկրանը QR կոդ",
+  "qr_instruction": "Օգտագործեք այս հասցեն `ցանկացած նշան կամ հավաքածու ստանալու համար",
   "qr_payment_amount": "Այս QR կոդը պարունակում է վճարման գումար։ Ուզում եք թարմացնել ընթացիկ արժեքը?",
   "quantity": "Քանակ",
   "question_to_disable_2fa": "Դուք վստահ եք, որ ուզում եք անջատել Cake 2FA-ն? 2FA կոդը այլևս չի պահանջվի դրամապանակ մուտք գործելու և որոշ ֆունկցիաներ օգտագործելու համար",
@@ -936,11 +939,11 @@
   "to": "Դեպի",
   "today": "Այսօր",
   "token_already_exists": "Նշանն արդեն գոյություն ունի",
-  "token_contract_address": "Token-ի պայմանագրի հասցե",
-  "token_decimal": "Token-ի տասանիշ",
-  "token_name": "Token-ի անուն, օրինակ՝ Tether",
-  "token_symbol": "Token-ի նշան, օրինակ՝ USDT",
+  "token_decimal": "Նշան տասնորդական (eg: USDT )",
+  "token_name": "Նշանի անուն (eg: Tethet )",
+  "token_symbol": "Token Symbol (eg, USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Երբեք մի ուղարկեք Tokens այս հասցեով !",
   "tor_connection": "Tor կապ",
   "tor_connection_timeout": "Tor կապի ժամկետ",
   "tor_experimental": "Սա փորձարարական առանձնահատկություն է, ոչ բոլոր կապերը տորթ դրամապանակների աջակցության համար",
@@ -1132,5 +1135,6 @@
   "you_will_receive_estimated_amount": "Դուք կստանաք ( գնահատված )",
   "you_will_send": "Փոխանակեք",
   "youCanGoBackToYourDapp": "Այժմ կարող եք վերադառնալ ձեր DAPP- ին",
+  "your": "Քո",
   "yy": "ՏՏ"
 }
