--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Tambahkan penerima lain (opsional)",
   "add_secret_code": "Atau, tambahkan kode rahasia ini ke aplikasi autentikator",
   "add_tip": "Tambahkan Tip",
+  "add_token": "Tambahkan token",
   "add_token_disclaimer_check": "Saya telah mengonfirmasi alamat dan informasi kontrak token menggunakan sumber yang memiliki reputasi baik. Menambahkan informasi jahat atau salah dapat mengakibatkan hilangnya dana.",
-  "add_token_warning": "Jangan mengedit atau menambahkan token seperti yang diinstruksikan oleh penipu.\nSelalu konfirmasikan alamat token dengan sumber tepercaya!",
+  "add_token_warning": "Jangan mengedit atau menambahkan token seperti yang diinstruksikan oleh penipu. Selalu konfirmasikan alamat token dengan sumber tepercaya!",
   "add_value": "Tambahkan nilai",
   "added_message_for_ata_error": "Mohon pastikan Anda memiliki saldo SOL yang cukup untuk menyelesaikan transaksi Anda.",
   "address": "Alamat",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Kontak dengan nama tersebut sudah ada. Silakan pilih nama lain.",
   "contact_support": "Hubungi Dukungan",
   "continue_text": "Lanjutkan",
+  "contract_address": "Alamat kontrak",
   "contract_warning": "Alamat kontrak ini telah ditandai sebagai berpotensi curang. Silakan lanjutkan dengan hati -hati.",
   "contractName": "Nama Kontrak",
   "contractSymbol": "Simbol Kontrak",
@@ -643,6 +645,7 @@
   "purchase_gift_card": "Beli Kartu Hadiah",
   "purple_dark_theme": "Tema gelap ungu",
   "qr_fullscreen": "Tap untuk membuka layar QR code penuh",
+  "qr_instruction": "Gunakan alamat ini untuk menerima token atau koleksi",
   "qr_payment_amount": "QR code ini berisi jumlah pembayaran. Apakah Anda ingin menimpa nilai saat ini?",
   "quantity": "Kuantitas",
   "question_to_disable_2fa": "Apakah Anda yakin ingin menonaktifkan Cake 2FA? Kode 2FA tidak lagi diperlukan untuk mengakses dompet dan fungsi tertentu.",
@@ -941,11 +944,11 @@
   "to": "Ke",
   "today": "Hari ini",
   "token_already_exists": "Token sudah ada",
-  "token_contract_address": "Alamat kontrak token",
-  "token_decimal": "Desimal token",
-  "token_name": "Nama token misalnya: Tether",
-  "token_symbol": "Simbol token misalnya: USDT",
+  "token_decimal": "Token desimal (EG: USDT )",
+  "token_name": "Nama token (eg: tether )",
+  "token_symbol": "Simbol token (EG: USDT )",
   "tokenID": "PENGENAL",
+  "tokens_strong_warning": "Jangan pernah mengirim token ke alamat ini !",
   "tor_connection": "koneksi Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Ini adalah fitur eksperimental, tidak semua koneksi yang terbuat dari dukungan dompet kue untuk routing - beberapa koneksi dapat menggunakan clearnet, untuk sepenuhnya merutekan aplikasi lalu lintas menggunakan untuk mode VPN.",
@@ -1137,5 +1140,6 @@
   "you_will_receive_estimated_amount": "Anda akan menerima(estimasi )",
   "you_will_send": "Konversi dari",
   "youCanGoBackToYourDapp": "Anda dapat kembali ke dapp Anda sekarang",
+  "your": "Milikmu",
   "yy": "YY"
 }
