--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Aggiungi un altro ricevitore (opzionale)",
   "add_secret_code": "Oppure aggiungi questo codice segreto a un'app di autenticazione",
   "add_tip": "Aggiungi suggerimento",
+  "add_token": "Aggiungi token",
   "add_token_disclaimer_check": "Ho confermato l'indirizzo e le informazioni del contratto token utilizzando una fonte attendibile. L'aggiunta di informazioni dannose o errate può comportare una perdita di fondi.",
-  "add_token_warning": "Non modificare o aggiungere token come indicato dai truffatori.\nConferma sempre gli indirizzi dei token con fonti attendibili!",
+  "add_token_warning": "Non modificare o aggiungere token come indicato dai truffatori. Conferma sempre gli indirizzi dei token con fonti attendibili!",
   "add_value": "Aggiungi valore",
   "added_message_for_ata_error": "Si prega di assicurati di avere abbastanza equilibrio sol per completare la transazione.",
   "address": "Indirizzo",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Esiste già un contatto con quel nome. Scegli un nome diverso.",
   "contact_support": "Contatta l'assistenza",
   "continue_text": "Continua",
+  "contract_address": "Indirizzo del contratto",
   "contract_warning": "Questo indirizzo del contratto è stato contrassegnato come potenzialmente fraudolento. Si prega di procedere con cautela.",
   "contractName": "Nome Contratto",
   "contractSymbol": "Simbolo del Contratto",
@@ -642,6 +644,7 @@
   "purchase_gift_card": "Acquista carta regalo",
   "purple_dark_theme": "Tema scuro viola",
   "qr_fullscreen": "Tocca per aprire il codice QR a schermo intero",
+  "qr_instruction": "Usa questo indirizzo per ricevere qualsiasi token o collezione su",
   "qr_payment_amount": "Questo codice QR contiene l'importo del pagamento. Vuoi sovrascrivere il valore attuale?",
   "quantity": "Quantità",
   "question_to_disable_2fa": "Sei sicuro di voler disabilitare Cake 2FA? Non sarà più necessario un codice 2FA per accedere al portafoglio e ad alcune funzioni.",
@@ -939,11 +942,11 @@
   "to": "A",
   "today": "Oggi",
   "token_already_exists": "Il token esiste già",
-  "token_contract_address": "Indirizzo del contratto token",
-  "token_decimal": "Decimale del token",
-  "token_name": "Nome del token, ad esempio: Tether",
-  "token_symbol": "Simbolo del token, ad esempio: USDT",
+  "token_decimal": "Token Decimal (EG: USDT )",
+  "token_name": "Nome simbolico (EG: tether )",
+  "token_symbol": "Simbolo token (EG: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Non inviare mai token a questo indirizzo !",
   "tor_connection": "Connessione Tor",
   "tor_connection_timeout": "Timeout di connessione TOR",
   "tor_experimental": "Questa è una funzionalità sperimentale, non tutte le connessioni realizzate con il supporto per il portafoglio di torta per routing - alcune connessioni possono utilizzare ClearNet, al fine di instradare completamente il traffico di app per l'uso del traffico con la modalità VPN.",
@@ -1137,5 +1140,6 @@
   "you_will_receive_estimated_amount": "Riceverai(stimato )",
   "you_will_send": "Conveti da",
   "youCanGoBackToYourDapp": "Puoi tornare al tuo DApp ora",
+  "your": "Tuo",
   "yy": "YY"
 }
