--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -20,8 +20,9 @@
   "add_receiver": "အခြားလက်ခံသူ ထည့်ပါ (ချန်လှပ်ထားနိုင်သည်)",
   "add_secret_code": "သို့မဟုတ် ဤလျှို့ဝှက်ကုဒ်ကို အထောက်အထားစိစစ်ခြင်းအက်ပ်တစ်ခုသို့ ထည့်ပါ။",
   "add_tip": "အကြံပြုချက်ထည့်ပါ။",
+  "add_token": "token ထည့်ပါ",
   "add_token_disclaimer_check": "ဂုဏ်သိက္ခာရှိသော အရင်းအမြစ်ကို အသုံးပြု၍ တိုကင်စာချုပ်လိပ်စာနှင့် အချက်အလက်ကို ကျွန်ုပ်အတည်ပြုပြီးဖြစ်သည်။ အန္တရာယ်ရှိသော သို့မဟုတ် မမှန်ကန်သော အချက်အလက်များကို ထည့်သွင်းခြင်းသည် ရန်ပုံငွေများ ဆုံးရှုံးသွားနိုင်သည်။",
-  "add_token_warning": "လိမ်လည်သူများ ညွှန်ကြားထားသည့်အတိုင်း တိုကင်များကို တည်းဖြတ်ခြင်း သို့မဟုတ် မထည့်ပါနှင့်။\nဂုဏ်သိက္ခာရှိသော အရင်းအမြစ်များဖြင့် အမြဲတမ်း တိုကင်လိပ်စာများကို အတည်ပြုပါ။",
+  "add_token_warning": "လိမ်လည်သူများ ညွှန်ကြားထားသည့်အတိုင်း တိုကင်များကို တည်းဖြတ်ခြင်း သို့မဟုတ် မထည့်ပါနှင့်။ ဂုဏ်သိက္ခာရှိသော အရင်းအမြစ်များဖြင့် အမြဲတမ်း တိုကင်လိပ်စာများကို အတည်ပြုပါ။",
   "add_value": "တန်ဖိုးထည့်ပါ။",
   "added_message_for_ata_error": "ကြင်နာစွာသင့်ငွေပေးငွေယူကိုဖြည့်စွက်ရန်သင်အလုံအလောက် sol မျှတမှုရှိသည်။",
   "address": "လိပ်စာ",
@@ -200,6 +201,7 @@
   "contact_name_exists": "ထိုအမည်နှင့် အဆက်အသွယ်တစ်ခု ရှိနှင့်ပြီးဖြစ်သည်။ အခြားအမည်တစ်ခုကို ရွေးပါ။",
   "contact_support": "ပံ့ပိုးကူညီမှုထံ ဆက်သွယ်ပါ။",
   "continue_text": "ဆက်လက်",
+  "contract_address": "စာချုပ်လိပ်စာ",
   "contract_warning": "ဒီစာချုပ်လိပ်စာအလားအလာအလားအလာအလားအလာအလံများကိုအလံလွှင့်တင်ခဲ့သည်။ ကျေးဇူးပြု. သတိဖြင့်ဆက်လက်လုပ်ဆောင်ပါ။",
   "contractName": "စာချုပ်အမည်",
   "contractSymbol": "စာချုပ်သင်္ကေတ",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "လက်ဆောင်ကတ်ဝယ်ပါ။",
   "purple_dark_theme": "ခရမ်းရောင် Drwing Theme",
   "qr_fullscreen": "မျက်နှာပြင်အပြည့် QR ကုဒ်ကိုဖွင့်ရန် တို့ပါ။",
+  "qr_instruction": "မည်သည့်လက်ခဏာသက်သေသို့မဟုတ်စုဆောင်းရရန်ဤလိပ်စာကိုသုံးပါ",
   "qr_payment_amount": "ဤ QR ကုဒ်တွင် ငွေပေးချေမှုပမာဏတစ်ခုပါရှိသည်။ လက်ရှိတန်ဖိုးကို ထပ်ရေးလိုပါသလား။",
   "quantity": "အရေအတွက်",
   "question_to_disable_2fa": "Cake 2FA ကို ပိတ်လိုသည်မှာ သေချာပါသလား။ ပိုက်ဆံအိတ်နှင့် အချို့သောလုပ်ဆောင်ချက်များကို အသုံးပြုရန်အတွက် 2FA ကုဒ်တစ်ခု မလိုအပ်တော့ပါ။",
@@ -938,11 +941,11 @@
   "to": "သို့",
   "today": "ဒီနေ့",
   "token_already_exists": "တိုကင်ရှိပြီးသား",
-  "token_contract_address": "တိုကင်စာချုပ်လိပ်စာ",
-  "token_decimal": "တိုကင်ဒဿမ",
-  "token_name": "တိုကင်အမည် ဥပမာ- Tether",
-  "token_symbol": "တိုကင်သင်္ကေတ ဥပမာ- USDT",
+  "token_decimal": "တိုကင်ဒ decimal မ (g: USDT )",
+  "token_name": "တိုကင်အမည် (g: tether )",
+  "token_symbol": "တိုကင်သင်္ကေတ (eg: USDT )",
   "tokenID": "အမှတ်သညာ",
+  "tokens_strong_warning": "ဒီလိပ်စာကိုဒီလိပ်စာကိုဘယ်တော့မှမပို့ပါနဲ့ !",
   "tor_connection": "Tor ချိတ်ဆက်မှု",
   "tor_connection_timeout": "Tor Connection အချိန်ကုန်",
   "tor_experimental": "၎င်းသည်စမ်းသပ်အင်္ဂါရပ်တစ်ခုဖြစ်ပြီးကိတ်မုန့်ပိုက်ဆံအိတ်ကိုပံ့ပိုးပေးသော Tor Routing မှပြုလုပ်သောဆက်သွယ်မှုအားလုံးမှာ Connections သည် Concernet ကို အသုံးပြု. VPN tor ကို VPN Mode ဖြင့် Tor ကို အသုံးပြု. Concernet ကိုသုံးနိုင်သည်။",
@@ -1105,7 +1108,7 @@
   "welcome_subtitle_new_wallet": "လတ်ဆတ်စွာစတင်လိုပါကအောက်ကပိုက်ဆံအိတ်အသစ်ကိုဖန်တီးပါ။",
   "welcome_subtitle_restore_wallet": "အကယ်. သင့်တွင်သင်ကိတ်မုန့်ထဲသို့ယူဆောင်လိုသောလက်ရှိပိုက်ဆံအိတ်ရှိပါက Restore Lestore Wallet ကိုရွေးပါ။",
   "welcome_to_cakepay": "Cake Pay မှကြိုဆိုပါသည်။",
-  "what_is_payjoin": "Payjoin ဆိုတာဘာလဲ ?#",
+  "what_is_payjoin": "Payjoin ဆိုတာဘာလဲ ?(",
   "what_is_silent_payments": "အသံတိတ်ငွေပေးချေမှုဆိုတာဘာလဲ",
   "widgets_address": "လိပ်စာ",
   "widgets_or": "သို့မဟုတ်",
@@ -1134,5 +1137,6 @@
   "you_will_receive_estimated_amount": "သင် ( ခန့်မှန်းခြေ ) လက်ခံရရှိလိမ့်မည်",
   "you_will_send": "မှပြောင်းပါ။",
   "youCanGoBackToYourDapp": "သငျသညျယခုသင်၏ dapp ကိုပြန်သွားနိုင်ပါတယ်",
+  "your": "ခင်ဗျားတို့၏",
   "yy": "YY"
 }
