--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Nog een ontvanger toevoegen (optioneel)",
   "add_secret_code": "Of voeg deze geheime code toe aan een authenticator-app",
   "add_tip": "Tip toevoegen",
+  "add_token": "Token toevoegen",
   "add_token_disclaimer_check": "Ik heb het adres en de informatie van het tokencontract bevestigd met behulp van een betrouwbare bron. Het toevoegen van kwaadaardige of onjuiste informatie kan leiden tot verlies van geld.",
-  "add_token_warning": "Bewerk of voeg geen tokens toe volgens de instructies van oplichters.\nBevestig tokenadressen altijd met betrouwbare bronnen!",
+  "add_token_warning": "Bewerk of voeg geen tokens toe volgens de instructies van oplichters. Bevestig tokenadressen altijd met betrouwbare bronnen!",
   "add_value": "Waarde toevoegen",
   "added_message_for_ata_error": "Zorg ervoor dat u voldoende SOL -balans hebt om uw transactie te voltooien.",
   "address": "Adres",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Er bestaat al een contact met die naam. Kies een andere naam.",
   "contact_support": "Contact opnemen met ondersteuning",
   "continue_text": "Doorgaan met",
+  "contract_address": "Contractadres",
   "contract_warning": "Dit contractadres is gemarkeerd als mogelijk frauduleus. Ga voorzichtig te werk.",
   "contractName": "Contractnaam",
   "contractSymbol": "Contractsymbool",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "Cadeaubon kopen",
   "purple_dark_theme": "Paars donker thema",
   "qr_fullscreen": "Tik om de QR-code op volledig scherm te openen",
+  "qr_instruction": "Gebruik dit adres om een token of verzamelobject te ontvangen",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "Hoeveelheid",
   "question_to_disable_2fa": "Weet je zeker dat je Cake 2FA wilt uitschakelen? Er is geen 2FA-code meer nodig om toegang te krijgen tot de portemonnee en bepaalde functies.",
@@ -938,11 +941,11 @@
   "to": "Naar",
   "today": "Vandaag",
   "token_already_exists": "Token bestaat al",
-  "token_contract_address": "Token contractadres",
-  "token_decimal": "Token decimaal",
-  "token_name": "Tokennaam bijv.: Tether",
-  "token_symbol": "Tokensymbool bijv.: USDT",
+  "token_decimal": "Token decimaal (EG: USDT )",
+  "token_name": "Token Naam (EG: Tether )",
+  "token_symbol": "Token symbool (EG: USDT )",
   "tokenID": "ID kaart",
+  "tokens_strong_warning": "Stuur nooit tokens naar dit adres !",
   "tor_connection": "Tor-verbinding",
   "tor_connection_timeout": "Tor -verbindingstime -out",
   "tor_experimental": "Dit is een experimentele functie, niet alle verbindingen gemaakt van Cake Wallet Support Tor Routing - Sommige verbindingen kunnen ClearNet gebruiken, om app -verkeer volledig te routeren Tor met VPN -modus.",
@@ -1135,5 +1138,6 @@
   "you_will_receive_estimated_amount": "U ontvangt(geschat )",
   "you_will_send": "Converteren van",
   "youCanGoBackToYourDapp": "U kunt nu terug naar uw DApp gaan",
+  "your": "Jouw",
   "yy": "JJ"
 }
