--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Adicione outro receptor (opcional)",
   "add_secret_code": "Ou adicione este código secreto a um aplicativo autenticador",
   "add_tip": "Adicionar Dica",
+  "add_token": "Adicione token",
   "add_token_disclaimer_check": "Confirmei o endereço e as informações do contrato de token usando uma fonte confiável. Adicionar informações maliciosas ou incorretas pode resultar em perda de fundos.",
-  "add_token_warning": "Não edite ou adicione tokens de acordo com as instruções dos golpistas.\nSempre confirme os endereços de token com fontes confiáveis!",
+  "add_token_warning": "Não edite ou adicione tokens de acordo com as instruções dos golpistas. Sempre confirme os endereços de token com fontes confiáveis!",
   "add_value": "Adicionar valor",
   "added_message_for_ata_error": "Por favor, certifique -se de ter um equilíbrio SOL suficiente para concluir sua transação.",
   "address": "Endereço",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Um contato com esse nome já existe. Escolha um nome diferente.",
   "contact_support": "Contatar Suporte",
   "continue_text": "Continuar",
+  "contract_address": "Endereço do contrato",
   "contract_warning": "Este endereço do contrato foi sinalizado como potencialmente fraudulento. Por favor, continue com cautela.",
   "contractName": "Nome do contrato",
   "contractSymbol": "Símbolo do Contrato",
@@ -643,6 +645,7 @@
   "purchase_gift_card": "Comprar vale-presente",
   "purple_dark_theme": "Tema escuro roxo",
   "qr_fullscreen": "Toque para abrir o código QR em tela cheia",
+  "qr_instruction": "Use este endereço para receber qualquer token ou colecionável em",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "Quantidade",
   "question_to_disable_2fa": "Tem certeza de que deseja desativar o Cake 2FA? Um código 2FA não será mais necessário para acessar a carteira e certas funções.",
@@ -940,11 +943,11 @@
   "to": "Para",
   "today": "Hoje",
   "token_already_exists": "Token já existe",
-  "token_contract_address": "Endereço do contrato de token",
-  "token_decimal": "Token decimal",
-  "token_name": "Nome do token, por exemplo: Tether",
-  "token_symbol": "Símbolo de token, por exemplo: USDT",
+  "token_decimal": "Token decimal (EG: USDT )",
+  "token_name": "Nome do token (EG: Tetter )",
+  "token_symbol": "Símbolo do token (EG: USDT )",
   "tokenID": "EU IA",
+  "tokens_strong_warning": "Nunca envie tokens para este endereço !",
   "tor_connection": "Conexão Tor",
   "tor_connection_timeout": "Tor de tempo limite da conexão",
   "tor_experimental": "Esse é um recurso experimental, nem todas as conexões feitas com o suporte para o suporte para a Cake Wallet - algumas conexões podem usar o ClearNet, a fim de rotear totalmente o tráfego de aplicativos TOR com o modo VPN.",
@@ -1137,5 +1140,6 @@
   "you_will_receive_estimated_amount": "Você receberá(estimado )",
   "you_will_send": "Converter de",
   "youCanGoBackToYourDapp": "Você pode voltar para o seu dapp agora",
+  "your": "Seu",
   "yy": "aa"
 }
