--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Magdagdag ng isa pang tatanggap (opsyonal)",
   "add_secret_code": "O, idagdag ang sikretong code na ito sa isang authenticator app",
   "add_tip": "Magdagdag ng Tip",
+  "add_token": "Magdagdag ng token",
   "add_token_disclaimer_check": "Kinumpirma ko ang address ng kontrata ng token at impormasyon gamit ang isang kagalang-galang na mapagkukunan. Ang pagdaragdag ng nakakahamak o hindi tamang impormasyon ay maaaring magresulta sa pagkawala ng mga pondo.",
-  "add_token_warning": "Huwag i-edit o magdagdag ng mga token tulad ng itinuro ng mga scammers.\nLaging kumpirmahin ang mga token address na may mga kagalang-galang na mapagkukunan!",
+  "add_token_warning": "Huwag i-edit o magdagdag ng mga token tulad ng itinuro ng mga scammers. Laging kumpirmahin ang mga token address na may mga kagalang-galang na mapagkukunan!",
   "add_value": "Magdagdag ng halaga",
   "added_message_for_ata_error": "Mabuting tiyakin na mayroon kang sapat na balanse ng sol upang makumpleto ang iyong transaksyon.",
   "address": "Address",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Ang isang pakikipag -ugnay sa pangalang iyon ay mayroon na. Mangyaring pumili ng ibang pangalan.",
   "contact_support": "Makipag-ugnay sa Suporta",
   "continue_text": "Magpatuloy",
+  "contract_address": "Address ng Kontrata",
   "contract_warning": "Ang address ng kontrata na ito ay na -flag bilang potensyal na mapanlinlang. Mangyaring magpatuloy sa pag -iingat.",
   "contractName": "Pangalan ng Kontrata",
   "contractSymbol": "Simbolo ng Kontrata",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "Bumili ng Gift Card",
   "purple_dark_theme": "Purple Dark Theme",
   "qr_fullscreen": "I-tap para makuha ang buong screen na QR code",
+  "qr_instruction": "Gamitin ang address na ito upang makatanggap ng anumang token o nakolekta sa",
   "qr_payment_amount": "Ang QR code na ito ay naglalaman ng halaga ng pagbabayad. Gusto mo bang i-overwrite ang kasalukuyang halaga?",
   "quantity": "Dami",
   "question_to_disable_2fa": "Sigurado ka bang nais mong huwag paganahin ang Cake 2FA? Ang isang 2FA code ay hindi na kinakailangan upang ma-access ang wallet at ilang mga pag-andar.",
@@ -938,11 +941,11 @@
   "to": "Sa",
   "today": "Ngayon",
   "token_already_exists": "Mayroon nang token",
-  "token_contract_address": "Address ng token contract",
-  "token_decimal": "Token decimal",
-  "token_name": "Pangalan ng token, halimbawa: Tether",
-  "token_symbol": "Simbolo ng token, halimbawa: USDT",
+  "token_decimal": "Token Decimal (eg: USDT)",
+  "token_name": "Pangalan ng Token (eg: Tether)",
+  "token_symbol": "Simbolo ng Token (eg: USDT)",
   "tokenID": "ID",
+  "tokens_strong_warning": "Huwag kailanman magpadala ng mga token sa address na ito!",
   "tor_connection": "Koneksyon ng Tor",
   "tor_connection_timeout": "Oras ng koneksyon sa tor",
   "tor_experimental": "Ito ay isang pang -eksperimentong tampok, hindi lahat ng mga koneksyon na ginawa mula sa cake ng suporta sa wallet ng tor ruta - ang ilang mga koneksyon ay maaaring gumamit ng clearnet, upang ganap na ruta ang paggamit ng trapiko ng trapiko na may mode na VPN.",
@@ -1134,5 +1137,6 @@
   "you_will_receive_estimated_amount": "Makakatanggap ka ng(tinantyang)",
   "you_will_send": "I-convert mula sa",
   "youCanGoBackToYourDapp": "Maaari kang bumalik sa iyong dapp ngayon",
+  "your": "IYONG",
   "yy": "YY"
 }
