--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Başka bir alıcı ekle (isteğe bağlı)",
   "add_secret_code": "Veya bu gizli kodu bir kimlik doğrulama uygulamasına ekleyin",
   "add_tip": "Bahşiş Ekle",
+  "add_token": "Jeton ekle",
   "add_token_disclaimer_check": "Belirteç sözleşmesi adresini ve bilgilerini saygın bir kaynak kullanarak onayladım. Kötü amaçlı veya yanlış bilgilerin eklenmesi para kaybına neden olabilir.",
-  "add_token_warning": "Dolandırıcıların talimatına göre jetonları düzenlemeyin veya eklemeyin.\nBelirteç adreslerini her zaman saygın kaynaklarla onaylayın!",
+  "add_token_warning": "Dolandırıcıların talimatına göre jetonları düzenlemeyin veya eklemeyin. Belirteç adreslerini her zaman saygın kaynaklarla onaylayın!",
   "add_value": "Değer ekle",
   "added_message_for_ata_error": "Lütfen işleminizi tamamlamak için yeterli SOL bakiyesine sahip olduğunuzdan emin olun.",
   "address": "Adres",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Bu isimde bir kişi zaten mevcut. Lütfen farklı bir ad seçin.",
   "contact_support": "Destek ile İletişime Geç",
   "continue_text": "Devam et",
+  "contract_address": "Sözleşme adresi",
   "contract_warning": "Bu sözleşme adresi potansiyel olarak hileli olarak işaretlenmiştir. Lütfen dikkatle devam edin.",
   "contractName": "Sözleşme Adı",
   "contractSymbol": "Sözleşme Sembolü",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "Hediye Kartı Satın Al",
   "purple_dark_theme": "Mor karanlık tema",
   "qr_fullscreen": "QR kodunu tam ekranda açmak için dokun",
+  "qr_instruction": "Herhangi bir jeton veya koleksiyon almak için bu adresi kullanın",
   "qr_payment_amount": "Bu QR kodu ödeme tutarını içeriyor. Geçerli miktarın üzerine yazmak istediğine emin misin?",
   "quantity": "Miktar",
   "question_to_disable_2fa": "Cake 2FA'yı devre dışı bırakmak istediğinizden emin misiniz? M-cüzdana ve belirli işlevlere erişmek için artık 2FA koduna gerek kalmayacak.",
@@ -938,11 +941,11 @@
   "to": "İle",
   "today": "Bugün",
   "token_already_exists": "Token zaten var",
-  "token_contract_address": "Token sözleşme adresi",
-  "token_decimal": "Belirteç ondalık",
-  "token_name": "Belirteç adı, örneğin: Tether",
-  "token_symbol": "Jeton sembolü, örneğin: USDT",
+  "token_decimal": "Jeton ondalık (eg: usdt )",
+  "token_name": "Jeton Adı (EG: Tether )",
+  "token_symbol": "Token Sembolü (EG: USDT )",
   "tokenID": "İD",
+  "tokens_strong_warning": "Asla bu adrese jeton gönderme !",
   "tor_connection": "Tor bağlantısı",
   "tor_connection_timeout": "Tor bağlantı zaman aşımı",
   "tor_experimental": "Bu deneysel bir özelliktir, kek cüzdanı desteğinden yapılan tüm bağlantılar değil, TOR yönlendirmesinden yapılmıştır - bazı bağlantılar, VPN moduyla uygulama trafik kullanımını tam olarak yönlendirmek için ClearNet kullanabilir.",
@@ -1134,5 +1137,6 @@
   "you_will_receive_estimated_amount": "(Tahmini ) alacaksınız",
   "you_will_send": "Biçiminden dönüştür:",
   "youCanGoBackToYourDapp": "Şimdi Dapp'ınıza geri dönebilirsin",
+  "your": "Senin",
   "yy": "YY"
 }
