--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Agregar otro receptor (opcional)",
   "add_secret_code": "O agregue este código secreto a una aplicación de autenticación",
   "add_tip": "Agregar sugerencia",
+  "add_token": "Agregar token",
   "add_token_disclaimer_check": "He confirmado la dirección del contrato del token y la información utilizando una fuente confiable. Agregar información maliciosa o incorrecta puede resultar en una pérdida de fondos.",
-  "add_token_warning": "No edite ni agregue tokens según las instrucciones de los estafadores.\n¡Confirme siempre las direcciones de los tokens con fuentes acreditadas!",
+  "add_token_warning": "No edite ni agregue tokens según las instrucciones de los estafadores. ¡Confirme siempre las direcciones de los tokens con fuentes acreditadas!",
   "add_value": "Añadir valor",
   "added_message_for_ata_error": "Asegúrese de tener suficiente equilibrio SOL para completar su transacción.",
   "address": "Dirección",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Ya existe un contacto con ese nombre. Elija un nombre diferente.",
   "contact_support": "Contactar con Soporte",
   "continue_text": "Continuar",
+  "contract_address": "Dirección de contrato",
   "contract_warning": "Esta dirección de contrato ha sido marcada como potencialmente fraudulenta. Proceda con precaución.",
   "contractName": "Nombre del contrato",
   "contractSymbol": "Símbolo de contrato",
@@ -642,6 +644,7 @@
   "purchase_gift_card": "Comprar tarjeta de regalo",
   "purple_dark_theme": "Tema morado oscuro",
   "qr_fullscreen": "Toque para abrir el código QR en pantalla completa",
+  "qr_instruction": "Use esta dirección para recibir cualquier token o coleccionable en",
   "qr_payment_amount": "Este código QR contiene un monto de pago. ¿Quieres sobreescribirlo?",
   "quantity": "Cantidad",
   "question_to_disable_2fa": "¿Estás seguro de que desea deshabilitar Cake 2FA? Ya no se necesitará un código 2FA para acceder a la billetera y a ciertas funciones.",
@@ -939,11 +942,11 @@
   "to": "A",
   "today": "Hoy",
   "token_already_exists": "Token ya existe",
-  "token_contract_address": "Dirección de contrato de token",
-  "token_decimal": "Token decimal",
-  "token_name": "Nombre del token, por ejemplo: Tether",
-  "token_symbol": "Símbolo de token, por ejemplo: USDT",
+  "token_decimal": "Token Decimal (eg: USDT )",
+  "token_name": "Nombre del token (eg: Tether )",
+  "token_symbol": "Símbolo de token (eg: USDT )",
   "tokenID": "IDENTIFICACIÓN",
+  "tokens_strong_warning": "Nunca envíe tokens a esta dirección !",
   "tor_connection": "conexión tor",
   "tor_connection_timeout": "Tiempo de espera de conexión de Tor",
   "tor_experimental": "Esta es una característica experimental, no todas las conexiones hechas desde Cake Wallet soportan el enrutamiento por Tor. Algunas conexiones pueden usar el Internet normal. Para enrutar completamente el tráfico de la aplicación use Tor con el modo VPN.",
@@ -1136,5 +1139,6 @@
   "you_will_receive_estimated_amount": "Recibirá(estimado )",
   "you_will_send": "Convertir de",
   "youCanGoBackToYourDapp": "Puedes volver a tu dapp ahora",
+  "your": "Su",
   "yy": "YY"
 }
