--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -20,8 +20,9 @@
   "add_receiver": "एक और रिसीवर जोड़ें (वैकल्पिक)",
   "add_secret_code": "या, इस गुप्त कोड को प्रमाणक ऐप में जोड़ें",
   "add_tip": "टिप जोड़ें",
+  "add_token": "टोकन जोड़ें",
   "add_token_disclaimer_check": "मैंने एक प्रतिष्ठित स्रोत का उपयोग करके टोकन अनुबंध पते और जानकारी की पुष्टि की है। दुर्भावनापूर्ण या गलत जानकारी जोड़ने से धन की हानि हो सकती है।",
-  "add_token_warning": "स्कैमर्स के निर्देशानुसार टोकन संपादित या जोड़ें न करें।\nहमेशा प्रतिष्ठित स्रोतों से टोकन पते की पुष्टि करें!",
+  "add_token_warning": "स्कैमर्स के निर्देशानुसार टोकन संपादित या जोड़ें न करें। हमेशा प्रतिष्ठित स्रोतों से टोकन पते की पुष्टि करें!",
   "add_value": "मूल्य जोड़ें",
   "added_message_for_ata_error": "कृपया सुनिश्चित करें कि आपके पास अपना लेनदेन पूरा करने के लिए पर्याप्त SOL बैलेंस है।",
   "address": "पता",
@@ -200,6 +201,7 @@
   "contact_name_exists": "उस नाम का एक संपर्क पहले से मौजूद है. कृपया कोई भिन्न नाम चुनें.",
   "contact_support": "सहायता से संपर्क करें",
   "continue_text": "जारी रहना",
+  "contract_address": "संविदा पता",
   "contract_warning": "इस अनुबंध के पते को संभावित रूप से धोखाधड़ी के रूप में चिह्नित किया गया है। कृपया सावधानी के साथ आगे बढ़ें।",
   "contractName": "अनुबंध का नाम",
   "contractSymbol": "अनुबंध चिह्न",
@@ -642,6 +644,7 @@
   "purchase_gift_card": "गिफ्ट कार्ड खरीदें",
   "purple_dark_theme": "पर्पल डार्क थीम",
   "qr_fullscreen": "फ़ुल स्क्रीन क्यूआर कोड खोलने के लिए टैप करें",
+  "qr_instruction": "किसी भी टोकन या संग्रहणीय पर प्राप्त करने के लिए इस पते का उपयोग करें",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "मात्रा",
   "question_to_disable_2fa": "क्या आप सुनिश्चित हैं कि आप Cake 2FA को अक्षम करना चाहते हैं? वॉलेट और कुछ कार्यों तक पहुँचने के लिए अब 2FA कोड की आवश्यकता नहीं होगी।",
@@ -940,11 +943,11 @@
   "to": "को",
   "today": "आज",
   "token_already_exists": "टोकन पहले से मौजूद है",
-  "token_contract_address": "टोकन अनुबंध पता",
-  "token_decimal": "सांकेतिक दशमलव",
-  "token_name": "टोकन नाम जैसे: टीथर",
-  "token_symbol": "टोकन प्रतीक जैसे: यूएसडीटी",
+  "token_decimal": "टोकन दशमलव (EG: USDT )",
+  "token_name": "टोकन नाम (EG: tether )",
+  "token_symbol": "टोकन प्रतीक (EG: USDT )",
   "tokenID": "पहचान",
+  "tokens_strong_warning": "इस पते पर टोकन कभी न भेजें !",
   "tor_connection": "टोर कनेक्शन",
   "tor_connection_timeout": "टोर कनेक्शन टाइमआउट",
   "tor_experimental": "यह एक प्रायोगिक विशेषता है, केक वॉलेट सपोर्ट टोर रूटिंग से किए गए सभी कनेक्शन नहीं - कुछ कनेक्शन क्लीयरनेट का उपयोग कर सकते हैं, ताकि वीपीएन मोड के साथ ऐप ट्रैफिक का उपयोग पूरी तरह से रूट करने के लिए हो।",
@@ -1136,5 +1139,6 @@
   "you_will_receive_estimated_amount": "आपको#अनुमानित ( प्राप्त होगा)",
   "you_will_send": "से रूपांतरित करें",
   "youCanGoBackToYourDapp": "अब आप अपने DAPP पर वापस जा सकते हैं",
+  "your": "आपका",
   "yy": "वाईवाई"
 }
