--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Thêm người nhận khác (tùy chọn)",
   "add_secret_code": "Hoặc, thêm mã bí mật này vào ứng dụng xác thực",
   "add_tip": "Thêm tiền boa",
+  "add_token": "Thêm mã thông báo",
   "add_token_disclaimer_check": "Tôi đã xác nhận địa chỉ hợp đồng token và thông tin bằng nguồn đáng tin cậy. Thêm thông tin sai hoặc độc hại có thể dẫn đến mất tiền.",
-  "add_token_warning": "Không chỉnh sửa hoặc thêm token theo yêu cầu của kẻ lừa đảo.\nLuôn xác nhận địa chỉ token từ các nguồn đáng tin cậy!",
+  "add_token_warning": "Không chỉnh sửa hoặc thêm token theo yêu cầu của kẻ lừa đảo. Luôn xác nhận địa chỉ token từ các nguồn đáng tin cậy!",
   "add_value": "Thêm giá trị",
   "added_message_for_ata_error": "Vui lòng đảm bảo bạn có đủ số dư SOL để hoàn thành giao dịch của mình.",
   "address": "Địa chỉ",
@@ -199,6 +200,7 @@
   "contact_name_exists": "Một liên hệ với cái tên đó đã tồn tại. Vui lòng chọn một tên khác.",
   "contact_support": "Liên hệ Hỗ trợ",
   "continue_text": "Tiếp tục",
+  "contract_address": "Địa chỉ hợp đồng",
   "contract_warning": "Địa chỉ hợp đồng này đã được gắn cờ là có khả năng lừa đảo. Hãy tiến hành thận trọng.",
   "contractName": "Tên Hợp đồng",
   "contractSymbol": "Ký hiệu Hợp đồng",
@@ -639,6 +641,7 @@
   "purchase_gift_card": "Mua thẻ quà tặng",
   "purple_dark_theme": "Chủ đề tối tím",
   "qr_fullscreen": "Nhấn để mở mã QR toàn màn hình",
+  "qr_instruction": "Sử dụng địa chỉ này để nhận bất kỳ mã thông báo hoặc bộ sưu tập nào trên",
   "qr_payment_amount": "Mã QR này chứa số tiền thanh toán. Bạn có muốn ghi đè giá trị hiện tại không?",
   "quantity": "Số lượng",
   "question_to_disable_2fa": "Bạn có chắc chắn muốn tắt Cake 2FA không? Mã 2FA sẽ không còn cần thiết để truy cập ví và một số chức năng nhất định.",
@@ -935,11 +938,11 @@
   "to": "ĐẾN",
   "today": "Hôm nay",
   "token_already_exists": "Mã thông báo đã tồn tại",
-  "token_contract_address": "Địa chỉ hợp đồng token",
-  "token_decimal": "Số thập phân của token",
-  "token_name": "Tên token ví dụ: Tether",
-  "token_symbol": "Ký hiệu token ví dụ: USDT",
+  "token_decimal": "Mã thông báo số thập phân (EG: USDT )",
+  "token_name": "Tên mã thông báo (EG: Tether )",
+  "token_symbol": "Biểu tượng mã thông báo (EG: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Không bao giờ gửi mã thông báo đến địa chỉ này !",
   "tor_connection": "Kết nối Tor",
   "tor_connection_timeout": "Thời gian chờ kết nối tor",
   "tor_experimental": "Đây là một tính năng thử nghiệm, không phải tất cả các kết nối được làm từ Wake Wallet Hỗ trợ định tuyến TOR - một số kết nối có thể sử dụng ClearNet, để định tuyến đầy đủ về lưu lượng truy cập ứng dụng Tor với chế độ VPN.",
@@ -1131,5 +1134,6 @@
   "you_will_receive_estimated_amount": "Bạn sẽ nhận được(ước tính )",
   "you_will_send": "Chuyển đổi từ",
   "youCanGoBackToYourDapp": "Bạn có thể quay lại DAPP của mình ngay bây giờ",
+  "your": "Của bạn",
   "yy": "YY"
 }
